Integrate Mux Video API for real-time stream status detection and management

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
 # .env.example
-# Cosmic API credentials
+
+# Cosmic CMS API credentials
 COSMIC_BUCKET_SLUG=your-bucket-slug
 COSMIC_READ_KEY=your-read-key
 COSMIC_WRITE_KEY=your-write-key
+
+# Mux Video API credentials
+MUX_TOKEN_ID=your-mux-token-id
+MUX_TOKEN_SECRET=your-mux-token-secret
+
+# Mux Webhook Secret (for webhook verification)
+MUX_WEBHOOK_SECRET=your-webhook-secret
+
+# Optional: Custom Socket URL for real-time updates
+NEXT_PUBLIC_SOCKET_URL=ws://localhost:3001
